syntax = "proto3";
option java_package = "com.hbsoo.game.protocol";
option java_outer_classname = "GameProtocol";

// 消息类型
enum MessageType {
  LOGIN_CMD = 0;
  LOGIN_CMD_RESP = 1;
  CREATE_ROOM_CMD = 2;
  CREATE_ROOM_CMD_RESP = 3;
  JOIN_ROOM_CMD = 4;
  JOIN_ROOM_CMD_RESP = 5;
  READY_GAME_CMD = 6;
  READY_GAME_CMD_RESP = 7;
  PLAY_CARD_CMD = 8;
  PLAY_CARD_CMD_RESP = 9;
  LOGOUT_CMD = 10;
  LOGOUT_CMD_RESP = 11;
  EXIT_ROOM_CMD = 12;
  EXIT_ROOM_CMD_RESP = 13;
  TRUSTEESHIP_CMD = 14;
  TRUSTEESHIP_CMD_RESP = 15;
}

// 登录
message LoginCmd {
  uint64 uid = 1;
  string userName = 2;
  string sessionKey = 3;

}
message LoginCmdResp {
  CommonResp result = 1;
}

// 退出登录
message LogoutCmd{
  uint64 uid = 1;
  string sessionKey = 3;
}
message LogoutCmdResp{
  CommonResp result = 1;
}

// 创建房间
message CreateRoomCmd{
  string name = 1;
}
message CreateRoomCmdResp{
  CommonResp result = 1;
  uint64 roomId = 2;
  string name = 3;
  uint64 roomer = 4;
}

// 加入房间
message JoinRoomCmd{
  uint64 roomId = 1;
}
message JoinRoomCmdResp{
  CommonResp result = 1;
  uint64 roomId = 2;
  string name = 3;
  string roomer = 4;
}

// 退出房间
message ExitRoomCmd{
  uint64 roomId = 1;
}
message ExitRoomCmdResp{
  CommonResp result = 1;
}

// 解散房间
message ReleaseRoomCmd{
  uint64 roomId = 1;
}
message ReleaseRoomCmdResp{
  CommonResp result = 1;
}

//准备游戏
message ReadyGameCmd {
  uint64 roomId = 1;
}
message ReadyGameCmdResp{
  CommonResp result = 1;
}

//托管
message TrusteeshipCmd{
  uint64 roomId = 1;
}
message TrusteeshipCmdResp{
  CommonResp result = 1;
  uint32 force = 2;// 是否强制托管

}

//出牌
message PlayCardCmd {
  repeated string cards = 1;
  uint64 roomId = 2;
}
message PlayCardCmdResp {
  repeated string cards = 1;
}

// 通用返回值
message CommonResp {
  string message = 1;
  RespCode  code = 2;
}
// 返回值代码
enum RespCode {
  SUCCESS = 0;
  FAIL = 1;
}

